--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "fzaninotto/faker",
+    "name": "snowsoft/faker",
     "type": "library",
     "description": "Faker is a PHP library that generates fake data for you.",
     "keywords": [
@@ -14,7 +14,7 @@
         }
     ],
     "require": {
-        "php": "^5.3.3 || ^7.0 || ^8.0"
+        "php": "^5.3.3 || ^7.0 || ^8.0|| ^8.1"
     },
     "require-dev": {
         "ext-intl": "*",
